# Simple-C-calculator

Calculator/: CMakeLists.txt
Calculator/apps/: CMakeLists.txt  main.cpp
Calculator/include/: calculator.h  expression.h  lexer.h  parser.h  policy.h  token.h  tokenizer.h
Calculator/src/: CMakeLists.txt  calculator.cpp  expression.cpp  lexer.cpp  parser.cpp  policy.cpp  tokenizer.cpp
Calculator/tests/: CMakeLists.txt  calc_tests.cpp  main_test.cpp  parser_tests.cpp  tokenizer_tests.cpp
